Update and rename minitv.html to index.html

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div class="container1" id="1">
-    <a href="minitv.html"><img src="minitvlogo.png" class="logo" ></a>
+    <a href="index.html"><img src="minitvlogo.png" class="logo" ></a>
     <div class="navbar">
-        <a style="color:rgb(243, 12, 147);margin-left:60px" href="minitv.html" type="button">Home</a>
-        <a onclick="alert()">Web-Series</a>
-        <a>Movies</a>
-        <a>Comedy</a>
+        <a style="color:rgb(243, 12, 147);margin-left:60px" href="index.html" type="button">Home</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Web-Series</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')" >Movies</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Comedy</a>
     </div>
 <div>
     <ion-icon name="settings-outline" style="margin-top:20px;padding-right:100px">
