--- a/page2showcontent.html
+++ b/page2showcontent.html
@@ -10,12 +10,12 @@
 
 </head>
     <div class="container1">
-    <a href="minitv.html"><img src="minitvlogo.png" class="logo" ></a>
+    <a href="index.html"><img src="minitvlogo.png" class="logo" ></a>
     <div class="navbar">
-        <a style="color:rgb(243, 12, 147);margin-left:60px" type="button" href="minitv.html">Home</a>
-        <a>Web-Series</a>
-        <a>Movies</a>
-        <a>Comedy</a>
+        <a style="color:rgb(243, 12, 147);margin-left:60px" type="button" href="index.html">Home</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Web-Series</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Movies</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Comedy</a>
     </div>
 <div>
     <ion-icon name="settings-outline" style="margin-top:20px;padding-right:100px"></ion-icon>
