--- a/page5showcontent.html
+++ b/page5showcontent.html
@@ -9,12 +9,12 @@
     <link href="https://fonts.cdnfonts.com/css/amazon-ember" rel="stylesheet">
 </head>
 <div class="container1">
-    <a href="minitv.html"><img src="minitvlogo.png" class="logo" ></a>
+    <a href="index.html"><img src="minitvlogo.png" class="logo" ></a>
     <div class="navbar">
-        <a style="color:rgb(243, 12, 147);margin-left:60px" href="minitv.html">Home</a>
-        <a>Web-Series</a>
-        <a>Movies</a>
-        <a>Comedy</a>
+        <a style="color:rgb(243, 12, 147);margin-left:60px" href="index.html">Home</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Web-Series</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Movies</a>
+        <a onclick="alert('This feature will be added later this is a demo project made by me. Thankyou ! ')">Comedy</a>
     </div>
 <div>
     <ion-icon name="settings-outline" style="margin-top:20px;padding-right:100px"></ion-icon>
